# simple-user-system-rs

./: .gitignore  Cargo.toml  README.md
src/: app.rs  main.rs  ui.rs  user.rs
